day 8 Add find city function

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="fragment_choose_no">Нет</string>
     <string name="fragment_choose_empty_cities">Чтобы смотреть погоду, добавьте хотя бы один город</string>
     <string name="fragment_add_title">Добавить город</string>
+    <string name="fragment_add_search_hint">Поиск города</string>
 </resources>
